crates/synd_api/src/gql/snapshots/synd_api__gql__tests__fetch_entries.snap
---
source: crates/synd_api/src/gql/mod.rs
expression: "usecase::FetchEntriesError {}.extend()"
---
message: fetch entries error
extensions:
  code: INTERNAL_ERROR
