crates/synd_api/src/gql/snapshots/synd_api__gql__tests__fetch_subscribed_feeds.snap
---
source: crates/synd_api/src/gql/mod.rs
expression: "usecase::FetchSubscribedFeedsError {}.extend()"
---
message: fetch subscribed feeds error
extensions:
  code: INTERNAL_ERROR
