crates/synd_api/src/gql/snapshots/synd_api__gql__tests__repository.snap
---
source: crates/synd_api/src/gql/mod.rs
expression: "usecase::Error::<String>::Repository(crate::repository::RepositoryError::Internal(anyhow::anyhow!(\"error\"))).extend()"
---
message: repository error
extensions:
  code: INTERNAL_ERROR
