crates/synd_api/src/gql/snapshots/synd_api__gql__tests__unauthorized.snap
---
source: crates/synd_api/src/gql/mod.rs
expression: "usecase::Error::<String>::Unauthorized(Unauthorized).extend()"
---
message: unauthorized error
extensions:
  code: UNAUTHORIZED
